corrected calendar alignment | HEAL015

--- a/src/components/Patient Module/patient.css
+++ b/src/components/Patient Module/patient.css
@@ -3981,7 +3981,7 @@ div#bmi-gender.fixingRadioIssues .MuiIconButton-label svg.MuiSvgIcon-root {
 
 .rbc-time-header.rbc-overflowing {
   border-right: 1px solid #ddd;
-  margin-right: 4px !important;
+  margin-right: 4.8px !important;
 }
 
 /* APPOINTMENT DETAILS CSS */
